# photo-rename

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  wxglade.wxg  wxglade_out.py
src/photo_rename/: adw.py  cli.py  lib.py  main.py  wx_ui.py
tests/: test_all.py  test_lib.py
