[tool.poetry]
name = "photo-rename"
version = "0.1.0"
description = ""
authors = ["Krzysztof Lewandowski <krzlew1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.7.0"
pillow = "^9.4.0"
rich = "^13.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
