[project]
name = "photo-rename"
version = "0.2.0"
description = "Tool to rename photos based on EXIF dates"
authors = [{ name = "Krzysztof Lewandowski", email = "krzlew1@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "pillow>=12.0.0",
  "pygobject>=3.54.5",
  "pytest>=8.4.2",
  "rich>=14.2.0",
  "typer>=0.20.0",
]

[build-system]
requires = ["uv_build >= 0.9.5, <0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pygobject-stubs>=2.14.0"]

[project.scripts]
photo-rename = "photo_rename.cli:main_cli"
photo-rename-gui = "photo_rename.adw:main"
